Delay refresh option in armatures is broken #65557

Closed
opened 2019-06-06 12:40:06 +02:00 by Michael Soluyanov · 7 comments

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: e80cbdac33
Worked: 2.79b

Short description of error
Delay refresh option in armatures is broken. It turns off deforming active bone itself.

Peek 2019-06-06 13-36.gif

Exact steps for others to reproduce the error

Open file try to rotate the bone
bones.blend

**System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: `e80cbdac33` Worked: 2.79b **Short description of error** Delay refresh option in armatures is broken. It turns off deforming active bone itself. ![Peek 2019-06-06 13-36.gif](https://archive.blender.org/developer/F7089940/Peek_2019-06-06_13-36.gif) **Exact steps for others to reproduce the error** Open file try to rotate the bone [bones.blend](https://archive.blender.org/developer/F7089939/bones.blend)
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Actually, I don't know what this option is supposed to do.

Actually, I don't know what this option is supposed to do.
Sergey Sharybin was assigned by Brecht Van Lommel 2019-06-06 13:23:48 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

This option may not make sense anymore in the new dependency graph, and may need to be removed.

This option may not make sense anymore in the new dependency graph, and may need to be removed.

This issue was referenced by f765e0cd21

This issue was referenced by f765e0cd21c29e0a8130ab719ddaa989d85fd4ce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65557
No description provided.