source/blender/editors/armature/pose_lib.c
@@ -1165,16 +1165,7 @@ static void poselib_preview_apply(bContext *C, wmOperator *op)
       RNA_int_set(op->ptr, "pose_index", -2); /* -2 means don't apply any pose */
     }
 
-    /* old optimize trick... this enforces to bypass the depsgraph
-     * - note: code copied from transform_generics.c -> recalcData()
-     */
-    // FIXME: shouldn't this use the builtin stuff?
-    if ((pld->arm->flag & ARM_DELAYDEFORM) == 0) {
-      DEG_id_tag_update(&pld->ob->id, ID_RECALC_GEOMETRY); /* sets recalc flags */
-    }
-    else {
-      BKE_pose_where_is(CTX_data_depsgraph(C), pld->scene, pld->ob);
-    }
+    DEG_id_tag_update(&pld->ob->id, ID_RECALC_GEOMETRY);
   }
 
   /* do header print - if interactively previewing */
@@ -1709,7 +1700,6 @@ static void poselib_preview_cleanup(bContext *C, wmOperator *op)
   Scene *scene = pld->scene;
   Object *ob = pld->ob;
   bPose *pose = pld->pose;
-  bArmature *arm = pld->arm;
   bAction *act = pld->act;
   TimeMarker *marker = pld->marker;
 
@@ -1724,15 +1714,7 @@ static void poselib_preview_cleanup(bContext *C, wmOperator *op)
   if (pld->state == PL_PREVIEW_CANCEL) {
     poselib_backup_restore(pld);
 
-    /* old optimize trick... this enforces to bypass the depgraph
-     * - note: code copied from transform_generics.c -> recalcData()
-     */
-    if ((arm->flag & ARM_DELAYDEFORM) == 0) {
-      DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY); /* sets recalc flags */
-    }
-    else {
-      BKE_pose_where_is(CTX_data_depsgraph(C), scene, ob);
-    }
+    DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
   }
   else if (pld->state == PL_PREVIEW_CONFIRM) {
     /* tag poses as appropriate */
