source/blender/makesdna/DNA_armature_types.h
@@ -147,7 +147,7 @@ typedef enum eArmature_Flag {
   ARM_DRAWNAMES = (1 << 3),
   ARM_POSEMODE = (1 << 4),
   ARM_FLAG_UNUSED_5 = (1 << 5), /* cleared */
-  ARM_DELAYDEFORM = (1 << 6),
+  ARM_FLAG_UNUSED_6 = (1 << 6), /* cleared */
   ARM_FLAG_UNUSED_7 = (1 << 7),
   ARM_MIRROR_EDIT = (1 << 8),
   ARM_FLAG_UNUSED_9 = (1 << 9),
